--- a/booking-service/Dockerfile
+++ b/booking-service/Dockerfile
@@ -1,7 +1,5 @@
 FROM node:7.5.0-alpine
 
-RUN addgroup -S nupp && adduser -S -g nupp nupp
-
 ENV HOME=/home/nupp
 
 COPY package.json npm-shrinkwrap.json $HOME/app/
@@ -12,13 +10,9 @@ ADD https://github.com/Yelp/dumb-init/releases/download/v1.1.1/dumb-init_1.1.1_a
 
 WORKDIR $HOME/app
 
-RUN chown -R nupp:nupp $HOME/* /usr/local/ && \
-    chmod +x /usr/local/bin/dumb-init && \
+RUN chmod +x /usr/local/bin/dumb-init && \
     npm cache clean && \
-    npm install --silent --progress=false --production && \
-    chown -R nupp:nupp $HOME/*
-
-USER nupp
+    npm install --silent --progress=false --production 
 
 EXPOSE 3000
 
